# CloudVox

./: CMakeLists.txt  README.md
Source/: CloudVoxAudioProcessor.cpp  CloudVoxAudioProcessor.h  CloudVoxAudioProcessorEditor.cpp  CloudVoxAudioProcessorEditor.h
Source/dsp/: AutoGain.cpp  AutoGain.h  MicroPitch.cpp  MicroPitch.h  ModDelay.cpp  ModDelay.h  PitchShifter.h  Saturator.cpp  Saturator.h  Shimmer.cpp  Shimmer.h  TiltEQ.cpp  TiltEQ.h
Source/state/: PresetManager.cpp  PresetManager.h
Source/ui/: Knob.h  Meter.h  PresetBar.h
cmake/patches/: juce-macos15-screenshot.patch
